--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@
 body {
     background: var(--bg);
     font-family: monospace;
+  
 }
 ul{
     font-family: helvetica;
@@ -28,14 +29,14 @@ li{
 }
 :root {
     --green: #0f0;
-    --white: rgb(3, 247, 36);
+    --white: #fff;
     --black: #000;
 }
 .light-theme {
     --bg: var(--green);
     --fontcolor: var(var--black);
     --btnBg: var(var--black); 
-    --btnFontColor: var(--white);
+    --btnFontColor: var(--green);
 }
 .dark-theme {
     --bg: var(--green);
@@ -55,4 +56,6 @@ li{
     background-color: var(btnBg);
     cursor: pointer;
 }
-.btn:focus { outline-style: none; }
+.btn:focus {
+     outline-style: none; 
+    }
